Fixed create with bad authentication